# BarnsleyFern

./: .gitignore  CMakeLists.txt  README.md  ferncontroller.h  fernmodel.h  fernview.h  main.cpp  mainwindow.ui
include/: fernmodel.h  fernview.h
src/: ferncontroller.cpp  fernmodel.cpp  fernview.cpp  main.cpp
